fix(TableList): add important on property overflow.

--- a/app/styles/_table-list.scss
+++ b/app/styles/_table-list.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    overflow: hidden;
+    overflow: hidden !important;
     //gap: $sd-base-increment * 1.5;
     &--comfortable {
         gap: $sd-base-increment * 2;
